--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -1,5 +1,1 @@
-telegram_bot_token: "<YOUR_TOKEN>"
-model_config_file: "models_config.json"
-font_path: "comic.ttf"
-bot_polling_timeout: 10
-logging_level: "INFO"
+telegram_bot_token: "YOUR_TOKEN"
